# project2_zhabinskaya_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: engine.py  main.py
